--- a/Views/App/Index.cshtml
+++ b/Views/App/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<TheWorld.Models.Trip>
+@{
 
     ViewBag.Title = "Home Page";
     // Layout = ""
@@ -24,6 +25,14 @@
         </form>
     </div>
     <div class="col-md-6">
-        <h1>The Map</h1>
+        <h2>The Map</h2>
+
+        <ul>
+            @foreach (var item in Model)
+            {
+                <li>@item.Name : @item.DateCreated.ToString("d")</li>
+
+            }
+        </ul>
     </div>
 </div>
