--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,12 +14,22 @@
 </head>
 <body>
     <div id="sidebar">
-        <img src="~/img/user.png" alt="headshot" class="headshot" style="background-color:#fff;"/>
-        <span id="userName">Sam Hastings</span>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <img src="~/img/user.png" alt="headshot" class="headshot" style="background-color:#fff;" />
+            <span id="userName">@User.Identity.Name</span>
+        }
+        
         <ul class="nav">
             <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
             <li><a asp-controller="App" asp-action="About">About</a></li>
             <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <li><a asp-controller="App" asp-action="Trips">About</a></li>
+                <li><a asp-controller="Auth" asp-action="Logout">Contact</a></li>
+            }
+           
         </ul>
     </div>
     <div id="wrapper">
