Committing some changes -- added angular to project

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
             <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
             @if (User.Identity.IsAuthenticated)
             {
-                <li><a asp-controller="App" asp-action="Trips">About</a></li>
-                <li><a asp-controller="Auth" asp-action="Logout">Contact</a></li>
+                <li><a asp-controller="App" asp-action="Trips">Trips</a></li>
+                <li><a asp-controller="Auth" asp-action="Logout">Logout</a></li>
             }
            
         </ul>
